@@ -1,5 +1,10 @@
 Change Log
 =============
+2009/09/20 (setup.py 0.1.4)
+ - ZOS support included
+ - ibm_db google code issue no - 25 Implementation change for sequence_reset_sql
+   in operations.py. 
+
 2009/08/06 (setup.py 0.1.2)
  - Adaptor name changed - Value of DATABASE_ENGINE needs to be "ibm_db_django" because of namespace changes in ibm_db_django-0.1.2 
  - Backward compatibility - Same codebase works with both Django 1.0.x and 1.1
